[tool.poetry]
name = "verifier-api"
version = "0.1.0"
description = ""
authors = ["s.dzmitryienka <s.dzmitryienka@gmail.com>"]
readme = "README.md"
packages = [{include = "verifier_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
sqlmodel = "^0.0.8"
uvicorn = "^0.22.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
