[tool.poetry]
name = "verifier-api"
version = "0.1.0"
description = ""
authors = ["s.dzmitryienka <s.dzmitryienka@gmail.com>"]
readme = "README.md"
packages = [{include = "verifier_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.9"}
bcrypt = "^4.0.1"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
